chore: use standard-version to make releases

--- a/package.json
+++ b/package.json
@@ -33,16 +33,11 @@
         "pretest:cov": "yarn run lint",
         "test:cov": "jest --coverage",
         "test": "jest --watch",
-        "release:prerelease": "./scripts/release.sh prerelease",
-        "release": "./scripts/release.sh patch",
-        "release:preminor": "./scripts/release.sh preminor",
-        "release:minor": "./scripts/release.sh minor",
-        "release:premajor": "./scripts/release.sh premajor",
-        "release:major": "./scripts/release.sh major"
+        "release": "standard-version"
     },
-    "husky": {
-        "hooks": {
-            "pre-commit": "yarn test:cov"
+    "standard-version": {
+        "scripts": {
+            "prerelease": "yarn test:cov"
         }
     },
     "dependencies": {
@@ -56,12 +51,11 @@
         "babel-core": "^7.0.0-0",
         "babel-jest": "^23.4.0",
         "camelcase": "^4.1.0",
-        "conventional-changelog-cli": "^2.0.5",
-        "husky": "^1.0.0-rc.13",
         "jest": "^23.5.0",
         "rollup": "^0.65.0",
         "rollup-plugin-sourcemaps": "^0.4.2",
         "rollup-plugin-uglify": "^4.0.0",
+        "standard-version": "^4.4.0",
         "ts-jest": "^23.1.4",
         "tslint": "^5.9.1",
         "typescript": "2.8.3"
