feat: make tslib a peer dep

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
             "prerelease": "yarn test:cov"
         }
     },
-    "dependencies": {
+    "peerDependencies": {
         "tslib": "^1.9.0"
     },
     "devDependencies": {
