--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "name": "crypto-uid",
     "version": "0.2.0",
     "description": "Cryptographically secure UIDs",
-    "main": "./dist/crypto-uid.umd.js",
-    "module": "./dist/crypto-uid.es5.js",
-    "es2015": "./dist/crypto-uid.js",
+    "main": "./dist/index.js",
+    "module": "./dist/es5/index.js",
+    "es2015": "./dist/es2015/index.js",
     "typings": "./dist/index.d.ts",
     "keywords": [
         "random",
@@ -26,8 +26,14 @@
     },
     "scripts": {
         "prebuild": "yarn run clean",
-        "build": "./scripts/build_package.sh crypto-uid",
-        "clean": "rm -rf dist out-tsc",
+        "build": "npm-run-all -s compile build:umd",
+        "build:umd": "rollup -c ./rollup.config.js",
+        "compile": "npm-run-all -p compile:es2015 compile:es5 compile:cjs compile:types",
+        "compile:es2015": "tsc -p ./tsconfig.es2015.json",
+        "compile:es5": "tsc -p ./tsconfig.es5.json",
+        "compile:cjs": "tsc -p ./tsconfig.cjs.json",
+        "compile:types": "tsc -p ./tsconfig.types.json",
+        "clean": "rm -rf dist/*",
         "lint": "tslint -c tslint.json -p ./tsconfig.spec.json -t stylish",
         "lint:fix": "yarn run lint -- --fix",
         "pretest:cov": "yarn run lint",
@@ -40,7 +46,7 @@
             "prerelease": "yarn test:cov"
         }
     },
-    "peerDependencies": {
+    "dependencies": {
         "tslib": "^1.9.0"
     },
     "devDependencies": {
@@ -52,7 +58,10 @@
         "babel-jest": "^23.4.0",
         "camelcase": "^4.1.0",
         "jest": "^23.5.0",
+        "npm-run-all": "^4.1.3",
         "rollup": "^0.65.0",
+        "rollup-plugin-commonjs": "^9.1.6",
+        "rollup-plugin-node-resolve": "^3.3.0",
         "rollup-plugin-sourcemaps": "^0.4.2",
         "rollup-plugin-uglify": "^4.0.0",
         "standard-version": "^4.4.0",
